--- a/Systembolaget/SurfaceWindow1.xaml
+++ b/Systembolaget/SurfaceWindow1.xaml
@@ -5,6 +5,16 @@
     Title="Systembolaget"
     >
   <Grid>
-
-  </Grid>
+        <s:TagVisualizer VisualizationAdded="OnVisualizationAdded" Grid.RowSpan="1">
+            <s:TagVisualizer.Definitions>
+                <s:TagVisualizationDefinition Source="wineBottle.xaml"
+                                              PhysicalCenterOffsetFromTag="0,3"
+                                              LostTagTimeout="1000"
+                                              MaxCount="5"
+                                              TagRemovedBehavior="Fade"
+                                              Value="0x3"
+                </s:TagVisualizationDefinition>
+            </s:TagVisualizer.Definitions>
+        </s:TagVisualizer>
+    </Grid>
 </s:SurfaceWindow>
