--- a/Systembolaget/wineBottle.xaml
+++ b/Systembolaget/wineBottle.xaml
@@ -3,7 +3,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="http://schemas.microsoft.com/surface/2008"
     Loaded="wineBottle_Loaded">
-    <Grid>
+    <Grid Width="200" Height="200">
+    	<Grid.RowDefinitions>
+    		<RowDefinition Height="0.6*"/>
+    		<RowDefinition Height="0.4*"/>
+    	</Grid.RowDefinitions>
+    	<Rectangle Fill="#FF2121C8" Margin="26.415,28.679,24.528,20.377" Grid.RowSpan="1" Stroke="Black"/>
         
     </Grid>
 </s:TagVisualization>
