--- a/Systembolaget/SurfaceWindow1.xaml
+++ b/Systembolaget/SurfaceWindow1.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="http://schemas.microsoft.com/surface/2008"
+    xmlns:tve="clr-namespace:Systembolaget"
     Title="Systembolaget"
     >
   <Grid>
@@ -12,7 +13,9 @@
                                               LostTagTimeout="1000"
                                               MaxCount="5"
                                               TagRemovedBehavior="Fade"
-                                              Value="0x7">
+                                              Value="0x7"
+                                              tve:TagVisualizerEvents.VisualizationEnter="OnVisualizationEnter"
+                  tve:TagVisualizerEvents.VisualizationLeave="OnVisualizationLeave">
                 </s:TagVisualizationDefinition>
                 
                 <s:TagVisualizationDefinition Source="wineBottle2.xaml"
