included new image resource for the ProductInfo

--- a/Systembolaget/SurfaceWindow1.xaml
+++ b/Systembolaget/SurfaceWindow1.xaml
@@ -4,7 +4,7 @@
     xmlns:s="http://schemas.microsoft.com/surface/2008"
     Title="Systembolaget"
     >
-  <Grid>
+    <Canvas x:Name="can" Canvas.Top="140" Canvas.Left="220" Height="900" Width="1377">
         <s:TagVisualizer
             TouchDown="tagUpdate"
             TouchMove="tagUpdate"
@@ -28,5 +28,5 @@
             </s:TagVisualizer.Definitions>
         	<Image Margin="0,0,-21.491,0" Source="Resources/bkgrndTabletop.png" Stretch="Fill"/>
         </s:TagVisualizer>
-    </Grid>
+    </Canvas>
 </s:SurfaceWindow>
